--- a/css/memory.css
+++ b/css/memory.css
@@ -28,8 +28,11 @@ body {
     background-color: #242526;
     display: flex;
     flex-wrap: wrap;
-    height: 80%;
-
+    max-width: 512px;
+    max-height: 512px;
+    width: 100%;
+    height: 100%;
+    border-radius: 40px;
 }
 
 .everything {
@@ -37,9 +40,54 @@ body {
 }
 
 .box {
-    margin-top: 25px;
+    /*background-color: #383939;*/
+    max-width: 128px;
+    max-height: 128px;
+    /*margin-top: 25px;*/
     font-size: 45px;
-    flex: 1 0 21%;
+    flex: 1 1 21%;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
+
+/*Pop-Up*/
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/*Pop-Up end*/
